[package]
name = "a48"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.4.0", features = [ "attributes" ] }
sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"