[package]
name = "a49"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-redis = "0.9"
futures = "0.3"
redis-async = "0.6.3"
serde = { version = "1", features = ["derive"] }
env_logger = "0.8"