[package]
name = "a57"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "r2d2","uuid", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.44"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }