[package]
name = "a60"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6.0", features = [ "attributes" ] }
dotenv = "0.15.0"
futures = "0.3"
paw = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = { version = "0.3", features = ["paw"] }
sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }