[package]
name = "a71"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }