[package]
name = "a72"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chan-signal = "0.3.3"
chan = "0.1.23"
indicatif = "0.15.0"
log = "0.4.14"
env_logger = "0.8.3"
