[package]
name = "download1"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.32"
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.8"

