[package]
name = "mgo"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wither = "0.9.0-alpha.2"
serde = "1.0.116"
tokio = { version = "0.2", features = ["full"] }