[package]
name = "mgoraw"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
tokio = { version = "0.2", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"