[package]
name = "moo"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = {version = "0.23.0-beta3", features = ["async", "no-verify-ssl"], default-features = false}
tokio = { version = "0.2", features = ["full"] }