[package]
name = "rget"
version = "0.1.0"
authors = ["tx991020 <1059622332@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.17"
indicatif = "0.15.0"
anyhow = "1.0.32"
